# tetris_tdd

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/evaluation_reports/: report.csv
logs/: plot_logs.html
src/: exceptions.py  main.py
src/ansi_extensions/: __init__.py
src/ansi_extensions/colour/: __init__.py  bg.py
src/board_manipulations/: board_manipulation.py  gravity.py
src/clock/: amortizing.py  simple.py
src/controllers/: cli.py  keyboard.py  random.py  stub.py
src/game_logic/: action_counter.py  block.py  board.py  controller_wrapper.py  exceptions.py  game.py
src/game_logic/components/: __init__.py  block.py  board.py  exceptions.py
src/game_logic/interfaces/: __init__.py  callback.py  callback_collection.py  clock.py  controller.py  rule.py  rule_sequence.py  ui.py
src/rules/: clear_full_lines_rule.py  hacky_pause_rule.py  move_rotate_rules.py  parry_rule.py  spawn_drop_merge_rule.py  track_score_rule.py
src/tetris/: exceptions.py  genetic_algorithm.py  logging.py  logging_config.py  main.py  main_.py  main_old.py  utils.py
src/tetris/ansi_extensions/: cursor.py
src/tetris/ansi_extensions/colour/: fg.py
src/tetris/audio_outputs/: playsound3.py  pygame.py  winsound.py
src/tetris/board_manipulations/: board_manipulation.py  gravity.py
src/tetris/cli/: cli.py  common.py  evaluate.py  fill_space.py  helpers.py  play.py  train.py
src/tetris/clock/: amortizing.py  simple.py
src/tetris/controllers/: bot_assisted.py  cli.py  composite.py  gamepad.py  heuristic_bot.py  keyboard.py  keyboard_keyboard.py  pynput_keyboard.py  random.py  random_controller.py  stub.py
src/tetris/controllers/heuristic_bot/: controller.py  heuristic.py
src/tetris/controllers/keyboard/: keyboard.py  pynput.py
src/tetris/controllers/llm/: __init__.py  controller.py  gemini.py
src/tetris/game_logic/: action_counter.py  game.py  runtime.py  sound_manager.py  ui_aggregator.py
src/tetris/game_logic/components/: __init__.py  block.py  board.py  exceptions.py
src/tetris/game_logic/interfaces/: __init__.py  animations.py  audio_output.py  callback.py  callback_collection.py  clock.py  controller.py  dependency_manager.py  global_current_game_index.py  pub_sub.py  rule.py  rule_sequence.py  runtime_rule.py  runtime_rule_sequence.py  ui.py
src/tetris/game_logic/rules/: messages.py
src/tetris/game_logic/rules/board_manipulations/: board_manipulation.py  clear_lines.py  fill_lines.py  gravity.py
src/tetris/game_logic/rules/core/: move_rotate_rules.py
src/tetris/game_logic/rules/core/drop_merge/: drop.py  drop_merge_rule.py  speed.py
src/tetris/game_logic/rules/core/post_merge/: post_merge_rule.py
src/tetris/game_logic/rules/core/scoring/: level_rule.py  track_score_rule.py  (+1 more)
src/tetris/game_logic/rules/monitoring/: track_performance_rule.py  track_score_rule.py
src/tetris/game_logic/rules/multiplayer/: tetris99_rule.py
src/tetris/game_logic/rules/runtime/: sound_toggle.py
src/tetris/game_logic/rules/special/: parry_rule.py  powerup.py  powerup_effect.py
src/tetris/genetic_algorithm/: genetic_algorithm.py  heuristic_bot_gym.py
src/tetris/heuristic_bot_gym/: detailed_heuristic_evaluator.py  evaluator.py  heuristic_bot_gym.py  report_best_more_detailed.csv  report_best_on_20x10.csv
src/tetris/heuristic_bot_gym/evaluators/: evaluator.py  parallel_o3_mini_refined.py  parallel_within_bot.py  synchronous.py
src/tetris/heuristic_bot_gym/evaluators/runners/: parallel.py  synchronous.py
src/tetris/heuristic_bot_gym/reports/: best_more_detailed.csv  best_more_detailed_on_20x10.csv  report.csv
src/tetris/heuristic_gym/: _analyze_report.py  detailed_heuristic_evaluator.py  heuristic_gym.py
src/tetris/heuristic_gym/evaluators/: evaluator.py
src/tetris/heuristic_gym/evaluators/runners/: parallel.py  synchronous.py
src/tetris/heuristic_gym/reports/: plot_report_scores_as_cdf.html
src/tetris/rules/: clear_full_lines_rule.py  hacky_pause_rule.py  move_rotate_rules.py  parry_rule.py  spawn_drop_merge_rule.py  track_score_rule.py
src/tetris/rules/core/: clear_full_lines_rule.py  messages.py  move_rotate_rules.py  spawn_drop_merge_rule.py
src/tetris/rules/core/spawn_drop_merge/: merge.py  spawn.py  spawn_drop_merge_rule.py  speed.py
src/tetris/rules/monitoring/: track_performance_rule.py  track_score_rule.py
src/tetris/rules/multiplayer/: tetris99_rule.py
src/tetris/rules/special/: parry_rule.py
src/tetris/space_filling_coloring/: concurrent_fill_and_colorize.py  concurrent_filling_and_coloring.py  drawer.py  fill_and_colorize.py  fill_and_colorize_config.py  four_colorizer.py  fuzz_test_concurrent_fill_and_colorize.py  tetromino_space_filler.py
src/tetris/tetromino_space_filler/: four_colorizer.py  offset_iterables.py  tetromino_space_filler.py
src/tetris/ui/cli/: animations.py  buffered_printing.py  color_palette.py  colorcet_colormaps.py  dynamic_layer.py  single_game_ui.py  ui.py  vec.py
src/tetromino_space_filler/: tetromino_space_filler.py
src/ui/: cli.py
src/ui/cli/: __init__.py  buffered_printing.py  color_palette.py  offset_iterables.py  tetromino_space_filler.py  ui.py
tests/board_manipulations/: test_gravity.py
tests/clock/: test_clock.py
tests/controllers/: test_heuristic.py  test_random.py
tests/controllers/llm/: test_llm_controller.py
tests/game_logic/: test_action_counter.py  test_block.py  test_board.py  test_controller_wrapper.py  test_game.py
tests/game_logic/components/: test_block.py  test_board.py
tests/game_logic/interfaces/: test_controller.py  test_rule_sequence.py
tests/rules/: test_clear_full_lines_rule.py  test_fill_lines_rule.py  test_move_rule.py  test_spawn_drop_merge_rule.py
tests/rules/board_manipulations/: test_gravity.py
tests/space_filling_coloring/: test_four_colorizer.py  test_offset_iterables.py  test_tetromino_space_filler.py
tests/tetromino_space_filler/: test_four_colorizer.py  test_offset_iterables.py  test_tetromino_space_filler.py
tests/ui/: test_cli.py
tests/ui/cli/: test_offset_iterables.py  test_tetromino_space_filler.py  test_ui.py
(+6 files in other folders)
