[tool.poetry]
name = "tetris"
version = "0.1.0"
description = ""
authors = ["Florian Bender <benderflorian70@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.0.0"
ansi = "^0.3.7"
keyboard = "^0.13.5"
scikit-image = "^0.24.0"
google-generativeai = { version = "^0.8.3", optional = true }
inputs = { version = "^0.5", optional = true }
pynput = "^1.7.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pre-commit = "^3.8.0"

[tool.poetry.extras]
gemini = ["google-generativeai"]
gamepad = ["inputs"]

[tool.poetry.scripts]
tetris = "tetris.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src"]
fix = true
unsafe-fixes = true

[tool.ruff.lint]
pydocstyle.convention = "google"
select = ["ALL"]
ignore = [
    "D1",     # missing docstrings         (use own judgement)
    "COM812", # missing trailing comma     (handled by formatter)
    "S101",   # assert used                (used only for things that should never fail and need no check in production)
    "S311",   # cryptographically weak RNG (I don't do cryptography in this project - not relevant)
    "TD",     # TODO comment formatting    (I don't care for the formatting - note that FIX still reminds me to handle TODOs)
]
unfixable = [
    "T201",   # no automatic removing prints
    "FLY002", # no automatic changing string literals
]

[tool.ruff.lint.per-file-ignores]
# allow redundant import aliases to signify explicit export in __init__.py files
"**/__init__.py" = ["PLC0414"]
# prints are allowed in CLI UI, and space-filling-coloring fuzz test and drawer
"src/tetris/ui/cli/*" = ["T201"]
"src/tetris/space_filling_coloring/drawer.py" = ["T201"]
"src/tetris/space_filling_coloring/fuzz_test_concurrent_fill_and_colorize.py" = [
    "T201",
]
# unused method arguments are ok (required to conform to protocols, but not necessarily used)
"src/tetris/rules/*" = ["ARG002"]
"src/tetris/controllers/*" = ["ARG002"]

"tests/*" = ["INP001"] # we want no __init__.py files in tests
# boolean positional args are okay to avoid clutter
"tests/game_logic/test_action_counter.py" = ["FBT003"]
# we do want to test and thus need to access private methods here
"tests/space_filling_coloring/test_tetromino_space_filler.py" = ["SLF001"]
"tests/space_filling_coloring/test_four_colorizer.py" = ["SLF001"]
"tests/board_manipulations/test_gravity.py" = ["SLF001"]

[tool.mypy]
strict = true
warn_return_any = false
mypy_path = "src"
